# cookiecutter-tox-plugin

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  azure-pipelines.yml  cookiecutter.json  mkdocs.yml  tox.ini
docs/: index.md
docs/contributor-guide/: quickstart.md
docs/user-guide/: publish-plugin.md  quickstart.md
hooks/: post_gen_project.py  pre_gen_project.py
pytest-{{cookiecutter.plugin_name}}/: README.rst  setup.py  tox.ini
pytest-{{cookiecutter.plugin_name}}/licenses/: BSD-3
tests/: conftest.py  test_create_template.py
tox-{{cookiecutter.plugin_name}}/: .gitignore  .pre-commit-config.yaml  README.md  azure-pipelines.yml  setup.cfg  setup.py  tox.ini
tox-{{cookiecutter.plugin_name}}/doc_sources/sphinx/: conf.py  index.rst
tox-{{cookiecutter.plugin_name}}/mkdocs/: index.md  mkdocs.yml
tox-{{cookiecutter.plugin_name}}/sphinxdocs/: conf.py  index.rst
tox-{{cookiecutter.plugin_name}}/tests/: test_tox_{{cookiecutter.plugin_name}}.py
tox-{{cookiecutter.plugin_name}}/tests/unit/: test_version.py
tox-{{cookiecutter.plugin_name}}/{{cookiecutter.pkg_name}}/: {{cookiecutter.module_name}}.py
