[metadata]
name = tox-{{cookiecutter.plugin_name}}
version = attr: {{cookiecutter.pkg_name}}.version.__version__
description = {{cookiecutter.short_description}}
long_description = file: README.md
long_description_content_type = text/markdown
keywords = virtual, environments, isolated, testing
maintainer = {{cookiecutter.full_name}}
maintainer-email = {{cookiecutter.email}}
author = {{cookiecutter.full_name}}
author-email = {{cookiecutter.email}}
url = http://tox-{{cookiecutter.plugin_name}}.readthedocs.org
project_urls =
    Source=https://github.com/{{cookiecutter.github_username}}/tox-{{cookiecutter.plugin_name}}
    Tracker=https://github.com/{{cookiecutter.github_username}}/tox-{{cookiecutter.plugin_name}}/issues
platforms = any
license = {{cookiecutter.license}}
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: tox
    Intended Audience :: Developers
    {% if cookiecutter.license == "MIT" -%}
    'License :: OSI Approved :: MIT License',
    {%- elif cookiecutter.license == "BSD-3" -%}
    'License :: OSI Approved :: BSD License',
    {%- elif cookiecutter.license == "GNU GPL v3.0" -%}
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    {%- elif cookiecutter.license == "Apache Software License 2.0" -%}
    'License :: OSI Approved :: Apache Software License',
    {%- elif cookiecutter.license == "Mozilla Public License 2.0" -%}
    'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
    {%- endif %}
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir =
  =src
zip_safe = True
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
install_requires =
    tox>={{cookiecutter.tox_version}}

[options.packages.find]
where = src

[options.entry_points]
tox =
    {{cookiecutter.pkg_name}}={{cookiecutter.entry_point}}

[options.extras_require]
testing =
    pytest >= 4.0.0, <6
    pytest-cov >= 2.5.1, <3
    pytest-mock >= 1.10.0, <2
    pytest-xdist >= 1.22.2, <2
docs =
    sphinx >= 2.0.0, < 3
    towncrier >= 18.5.0
    pygments-github-lexers >= 0.0.5
    sphinxcontrib-autoprogram >= 0.1.5

[bdist_wheel]
universal = 1
